[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "ruff>=0.14.0",
    "ipykernel>=7.1.0",
    "tqdm>=4.67.0",
    "ipywidgets>=8.1.0",
]

[tool.ruff]
extend-exclude = []

[tool.poe.tasks]
check = "ruff check"

[tool.poe.tasks.format]
cmd = "uv run ruff format"
cwd = "."
